feat(editor): write the level to the file that saveLevel is given
LevelWriter.saveLevel writes the JSON to its path argument in UTF-8,
creating the file or replacing the contents of one already there, and
throws UncheckedIOException where the write fails. The save button in
the control bar reaches it through RootPanel, which passes newLevel.json.

The rest of this commit is a documentation sweep against the writing
standard. JsonUtil, the four packages and module-info are documented for
the first time, and writePrettyString, three Swatch constructors and
TileSource now state the contracts and the example they owe a caller.

Several sentences described something other than what runs, and now
match it: the canvas stands on a CanvasStage, an ActionButton reports 36
pixels of height, and a scroll increment moves the grid by one scroll
unit.

MenuBar.Item referred to {@value #SIDE_PADDING}, which resolves against
the nested class. Qualifying it with MenuBar lets javadoc resolve it.